--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 	<h2 align="center">
 		See console Area using chrome Developer tools
 	</h2>
+	<p>
+		I have created my own code so the output names may differ<br>
+		but the logic of 'j' remains<br>
+		as it says <br>
+		Goodbye for j<br>
+		and <br>
+		hello for other letters
 	<script type="text/javascript" src="goodbye_script.js"></script>
 	<script type="text/javascript" src="hellow_script.js"></script>
 	<script type="text/javascript" src="script.js"></script>
