--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<h2 align="center">
 		See console Area using chrome Developer tools
 	</h2>
-	<p>
+	<p align="center">
 		I have created my own code so the output names may differ<br>
 		but the logic of 'j' remains<br>
 		as it says <br>
